--- a/static/quikdecision.html
+++ b/static/quikdecision.html
@@ -2,12 +2,134 @@
 <html>
 <head>
 <title>QuikDecision</title>
-<style type="text/css">
-    #error { color: red; }
-</style>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
+<div class="container-fluid">
+    <h2>QuikDecision</h2>
+    <div id="error" class="alert alert-danger">Error: <span class="msg"> </span></div>
+    <div class="accordion" id="deciders">
+        <div id="coin" class="card">
+            <div class="card-header" id="headingCoin">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseCoin" aria-expanded="true" aria-controls="collapseCoin">
+                        Flip a Coin
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapseCoin" class="collapse" aria-labelledby="headingCoin" data-parent="#deciders">
+                <div class="card-body">
+                    <form method="GET" action="/flip">
+                        <button class="decide" name="flip" type="button">Flip</button>
+                        <span class="value"> </span>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="dice" class="card">
+            <div class="card-header" id="headingDice">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseDice" aria-expanded="true" aria-controls="collapseDice">
+                        Roll the Dice
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapseDice" class="collapse " aria-labelledby="headingDice" data-parent="#deciders">
+                <div class="card-body">
+                    <form method="GET" action="/roll">
+                        <label for="expr">Dice Expression: </label><input id="expr" name="expr" type="text" width="100" value="1d6"/>
+                        <button class="decide" name="roll" type="button">Roll</button>
+                        <div><span class="value"> </span>: <span class="extra"> </span></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="oracle" class="card">
+            <div class="card-header" id="headingOracle">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOracle" aria-expanded="true" aria-controls="collapseOracle">
+                        Ask the Oracle
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapseOracle" class="collapse " aria-labelledby="headingOracle" data-parent="#deciders">
+                <div class="card-body">
+                    <form method="GET" action="/oracle">
+                        <button class="decide" name="ask" type="button">Ask</button>
+                        <div>
+                            <span class="label"> </span>
+                            <q class="value"> </q>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="percent" class="card">
+            <div class="card-header" id="headingPercent">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsePercent" aria-expanded="true" aria-controls="collapsePercent">
+                        Percent Likely
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapsePercent" class="collapse " aria-labelledby="headingPercent" data-parent="#deciders">
+                <div class="card-body">
+                    <form method="GET" action="/likely">
+                        <label for="percent">Percent Likely: </label><input id="percent" name="percent" type="number" min="1" max="99" value="50"/>
+                        <button class="decide" name="guess" type="button">Guess</button>
+                        <div class="value"> </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="pick" class="card">
+            <div class="card-header" id="headingPick">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsePick" aria-expanded="true" aria-controls="collapsePick">
+                        Pick a Number
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapsePick" class="collapse " aria-labelledby="headingPick" data-parent="#deciders">
+                <div class="card-body">
+                    <form method="GET" action="/pick">
+                        <label for="low">Low:</label> <input id="low" name="low" type="number" value="1"/>
+                        <label for="high">High:</label> <input id="high" name="high" type="number" value="10"/>
+                        <button class="decide" name="pick" type="button">Pick</button>
+                        <div class="value"> </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div id="select" class="card">
+            <div class="card-header" id="headingSelect">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseSelect" aria-expanded="true" aria-controls="collapseSelect">
+                        Select a String
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapseSelect" class="collapse " aria-labelledby="headingSelect" data-parent="#deciders">
+                <div class="card-body">
+                    <form method="GET" action="/select">
+                        <label for="strings">Comma-separated list of strings:</label><br />
+                        <input id="strings" name="strings" type="text" value=""/>
+                        <button class="decide" name="select" type="button">Select</button>
+                        <div class="value"> </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div> <!-- accordian -->
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script>
 function make_decision(id) {
     let form = $(id +" form");
@@ -41,72 +163,25 @@ function make_decision(id) {
 }
 $( document ).ready(function() {
     $("#error").hide();
-    $("#coin button").click(function(event) {
+    $("#coin button.decide").click(function(event) {
         make_decision("#coin", {});
     });
-    $("#dice button").click(function(event) {
+    $("#dice button.decide").click(function(event) {
         make_decision("#dice");
     });
-    $("#oracle button").click(function(event) {
+    $("#oracle button.decide").click(function(event) {
         make_decision("#oracle");
     });
-    $("#percent button").click(function(event) {
+    $("#percent button.decide").click(function(event) {
         make_decision("#percent");
     });
-    $("#pick button").click(function(event) {
+    $("#pick button.decide").click(function(event) {
         make_decision("#pick");
     });
-    $("#select button").click(function(event) {
+    $("#select button.decide").click(function(event) {
         make_decision("#select");
     });
 });
 </script>
-<div id="error">Error: <span class="msg"> </span></div>
-<div id="coin">
-<form method="GET" action="/flip">
-    <button name="flip" type="button">Flip</button>
-    <div class="value"> </div>
-</form>
-</div>
-<div id="dice">
-<form method="GET" action="/roll">
-    <label for="expr">Dice Expression: </label><input id="expr" name="expr" type="text" width="100" value="1d6"/>
-    <button name="roll" type="button">Roll</button>
-    <div><span class="value"> </span>: <span class="extra"> </span></div>
-</form>
-</div>
-<div id="oracle">
-<form method="GET" action="/oracle">
-    <button name="ask" type="button">Ask</button>
-    <div>
-        <span class="label"> </span>
-        <q class="value"> </q>
-    </div>
-</form>
-</div>
-<div id="percent">
-<form method="GET" action="/likely">
-    <label for="percent">Percent Likely: </label><input id="percent" name="percent" type="number" min="1" max="99" value="50"/>
-    <button name="guess" type="button">Guess</button>
-    <div class="value"> </div>
-</form>
-</div>
-<div id="pick">
-<form method="GET" action="/pick">
-    <label for="low">Low: </label><input id="low" name="low" type="number" value="1"/>
-    <label for="high">High: </label><input id="high" name="high" type="number" value="10"/>
-    <button name="pick" type="button">Pick</button>
-    <div class="value"> </div>
-</form>
-</div>
-<div id="select">
-<form method="GET" action="/select">
-    <label for="strings">Comma-separated list of strings: </label><br />
-    <input id="strings" name="strings" type="text" value=""/>
-    <button name="select" type="button">Select</button>
-    <div class="value"> </div>
-</form>
-</div>
 </body>
 </html>
-
