--- a/static/quikdecision.html
+++ b/static/quikdecision.html
@@ -34,16 +34,22 @@
         color: #888;
     }
     footer {
-        margin-top: 2rem;
         font-size: 75%;
         color: #888;
+    }
+    .header h3 {
+        font-size: 80%;
+        margin: 0.5rem 10rem;
     }
 </style>
 </head>
 <body>
 <div class="container-fluid">
-    <h2>QuikDecision</h2>
-    <div id="error" class="alert alert-danger invisible">Error: <span class="msg"> </span></div>
+    <div class="header text-primary mb-4">
+        <h2>QuikDecision</h2>
+        <h3>If you can't make a decision, use QuikDecision.</h3>
+    </div>
+    <div id="error" class="alert alert-danger">Error: <span class="msg"> </span></div>
     <div class="row no-gutters">
         <div class="offset-1 col-1">
             <ul class="tab-ctrl float-right">
@@ -240,17 +246,13 @@
         </div> <!-- deciders -->
     </div> <!-- row -->
 </div> <!-- container -->
-<div class="row">
-    <div class="offset-1 col-9">
-        <footer id="colophon" role="contentinfo">
-            <div class="site-info">
-                <div class="footercopy">Copyright 2018, G. Wade Johnson. Licensed under Creative Commons Attribution License 2.5.</div>
-                <!--    <div class="footercredit"><a href="/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></div> -->
-                <div class="clear"></div>
-            </div><!-- .site-info -->
-        </footer><!-- #colophon -->
-    </div>
-</div>
+<footer id="colophon" role="contentinfo" class="fixed-bottom ml-5 mb-3>
+    <div class="site-info">
+        <div class="footercopy">Copyright 2018, G. Wade Johnson. Licensed under Creative Commons Attribution License 2.5.</div>
+        <!--    <div class="footercredit"><a href="/privacy-policy" target="_blank" rel="noopener">Privacy Policy</a></div> -->
+        <div class="clear"></div>
+    </div><!-- .site-info -->
+</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script>
