Add support for d3.

--- a/static/attribution.html
+++ b/static/attribution.html
@@ -28,6 +28,8 @@
     <dd>Rabbit by Thomas Helbig from the Noun Project</dd>
     <dt>hopping bunny (https://thenounproject.com/term/hopping-bunny/938284/)</dt>
     <dd>hopping bunny by Evan Bond from the Noun Project</dd>
+    <dt>Fortune Telling (https://thenounproject.com/term/fortune-telling/1728520)</dt>
+    <dd>Fortune Telling by Made x Made from the Noun Project</dd>
 </dl>
 </body>
 </html>
