Only attributions for pictures I'm using

--- a/static/attribution.html
+++ b/static/attribution.html
@@ -8,28 +8,29 @@
 <p>The images on this site are mostly from the <a href="https://thenounproject.com/" target="_blank" rel="noopener">Noun Project</a>.</p>
 
 <dl>
-    <dt>bunny (https://thenounproject.com/term/bunny/1796589/)</dt>
-    <dd>bunny by Dumitriu Robert from the Noun Project</dd>
     <dt>Coins (https://thenounproject.com/term/coins/1485554/)</dt>
     <dd>Coins by Deemak Daksina from the Noun Project</dd>
     <dt>Dice (https://thenounproject.com/term/dice/1765632/)</dt>
     <dd>Dice by Andy Ivandikov from the Noun Project</dd>
-    <dt>oracle (https://thenounproject.com/term/oracle/139375/)</dt>
-    <dd>oracle by Daniel Hammer from the Noun Project</dd>
+    <dt>Fortune Telling (https://thenounproject.com/term/fortune-telling/1728520)</dt>
+    <dd>Fortune Telling by Made x Made from the Noun Project</dd>
     <dt>Percent (https://thenounproject.com/term/percent/625396/)</dt>
     <dd>Percent by Veronika Krpciarova from the Noun Project</dd>
-    <dt>Number (https://thenounproject.com/term/number/184423/)</dt>
-    <dd>Number by Chris Markhing from the Noun Project</dd>
     <dt>Number (https://thenounproject.com/term/number/1576875/)</dt>
     <dd>Number by Richard Schumann from the Noun Project</dd>
     <dt>text (https://thenounproject.com/term/text/957716/)</dt>
     <dd>text by Juraj Sedlák from the Noun Project</dd>
+<!--    <dt>bunny (https://thenounproject.com/term/bunny/1796589/)</dt>
+    <dd>bunny by Dumitriu Robert from the Noun Project</dd>
+    <dt>oracle (https://thenounproject.com/term/oracle/139375/)</dt>
+    <dd>oracle by Daniel Hammer from the Noun Project</dd>
+    <dt>Number (https://thenounproject.com/term/number/184423/)</dt>
+    <dd>Number by Chris Markhing from the Noun Project</dd>
     <dt>Rabbit (https://thenounproject.com/term/rabbit/464769/)</dt>
     <dd>Rabbit by Thomas Helbig from the Noun Project</dd>
     <dt>hopping bunny (https://thenounproject.com/term/hopping-bunny/938284/)</dt>
     <dd>hopping bunny by Evan Bond from the Noun Project</dd>
-    <dt>Fortune Telling (https://thenounproject.com/term/fortune-telling/1728520)</dt>
-    <dd>Fortune Telling by Made x Made from the Noun Project</dd>
+-->
 </dl>
 </body>
 </html>
