Improving select a string feature.
- Better button image.
- Add example list support.

--- a/static/attribution.html
+++ b/static/attribution.html
@@ -18,6 +18,10 @@
     <dd>Percent by Veronika Krpciarova from the Noun Project</dd>
     <dt>Number (https://thenounproject.com/term/number/1576875/)</dt>
     <dd>Number by Richard Schumann from the Noun Project</dd>
+    <dt>List (https://thenounproject.com/term/list/1556761/)</dt>
+    <dd>List by unlimicon from the Noun Project</dd>
+    <dt>List (https://thenounproject.com/term/list/857912/)</dt>
+    <dd>List by Storm Icons from the Noun Project</dd>
     <dt>text (https://thenounproject.com/term/text/957716/)</dt>
     <dd>text by Juraj Sedlák from the Noun Project</dd>
 <!--    <dt>bunny (https://thenounproject.com/term/bunny/1796589/)</dt>
