Complete local storage feature for saved lists.
- Update privacy policy
- Tweaking display styling.

--- a/static/privacy.html
+++ b/static/privacy.html
@@ -8,6 +8,12 @@
 
 <p>This program is provided for entertainment purposes only. It collects no
 information about any visitors, and stores no private information.</p>
+
+<p>The save/load feature in the select a string form saves all data to
+local storage in your browser. This information is not stored by the server.
+The list of values is sent to the server when you ask to select, but they
+are not stored on the server. In addition, the names you have chosen for the
+saved lists are not sent to the server at all.</p>
 </body>
 </html>
 
