Add Draw a Card feature

--- a/static/attribution.html
+++ b/static/attribution.html
@@ -12,6 +12,8 @@
     <dd>Coins by Deemak Daksina from the Noun Project</dd>
     <dt>Dice (https://thenounproject.com/term/dice/1765632/)</dt>
     <dd>Dice by Andy Ivandikov from the Noun Project</dd>
+    <dt>Cards (https://thenounproject.com/term/cards/415289/)</dt>
+    <dd>Cards by Bonegolem from the Noun Project</dd>
     <dt>Fortune Telling (https://thenounproject.com/term/fortune-telling/1728520)</dt>
     <dd>Fortune Telling by Made x Made from the Noun Project</dd>
     <dt>Percent (https://thenounproject.com/term/percent/625396/)</dt>
